--- a/AccelerometerProtoype/Base.lproj/Main.storyboard
+++ b/AccelerometerProtoype/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Completion score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m24-FC-2aZ">
-                                <rect key="frame" x="16" y="327" width="343" height="61"/>
+                                <rect key="frame" x="16" y="327" width="211" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
@@ -73,7 +73,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="60" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NIj-wh-8Cq">
-                                <rect key="frame" x="147" y="384" width="80" height="30"/>
+                                <rect key="frame" x="298" y="342" width="60" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -107,6 +107,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fw8-ZC-xZY" customClass="GradientProgressBar" customModule="GradientProgressBar">
+                                <rect key="frame" x="17" y="411" width="342" height="2"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </progressView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4g4-Ov-G7U">
+                                <rect key="frame" x="144" y="434" width="85" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -125,9 +136,11 @@
                     <connections>
                         <outlet property="amplitudeLabel" destination="9jz-x5-zm6" id="FeV-G8-VVZ"/>
                         <outlet property="amplitudeSlider" destination="vOG-aH-Q9c" id="sSK-mK-9DT"/>
+                        <outlet property="completionPercentageLabel" destination="4g4-Ov-G7U" id="CeR-s2-cqv"/>
                         <outlet property="completionScoreText" destination="NIj-wh-8Cq" id="9CT-ug-gc8"/>
                         <outlet property="freqLabel" destination="gFw-XI-OML" id="Yub-YZ-ELW"/>
                         <outlet property="freqSlider" destination="NtJ-om-tL3" id="tdt-d8-hlq"/>
+                        <outlet property="progressBar" destination="fw8-ZC-xZY" id="w6O-1Y-ShY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
